preparation for bulk release